[gd_scene load_steps=8 format=3 uid="uid://78mqed0x2a3q"]

[ext_resource type="Script" uid="uid://ctxch1gcviwep" path="res://code/game_scripts/fighting.gd" id="1_ordpl"]
[ext_resource type="Texture2D" uid="uid://ccif0kdex5tha" path="res://assests/sprite_sheet.png" id="2_lfnlm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pyqvx"]
atlas = ExtResource("2_lfnlm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ordpl"]
size = Vector2(80, 40)

[sub_resource type="Animation" id="Animation_lfnlm"]
resource_name = "info_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/MarginContainer/HBoxContainer/info:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.96),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/MarginContainer/HBoxContainer/menu:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/MarginContainer/HBoxContainer/items_menu:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/MarginContainer/HBoxContainer/Fachwissen_menu:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_pyqvx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/MarginContainer/HBoxContainer/info:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/MarginContainer/HBoxContainer/menu:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vq8ku"]
_data = {
&"RESET": SubResource("Animation_pyqvx"),
&"info_animation": SubResource("Animation_lfnlm")
}

[node name="fighting" type="Node"]
script = ExtResource("1_ordpl")

[node name="visuals" type="Node2D" parent="."]
z_index = 5

[node name="player" type="Sprite2D" parent="visuals"]
z_index = 5
position = Vector2(65, 56)
texture = SubResource("AtlasTexture_pyqvx")

[node name="enemy" type="Sprite2D" parent="visuals"]
z_index = 5
position = Vector2(249, 37)
texture = SubResource("PlaceholderTexture2D_ordpl")

[node name="enemy_health_label" type="Label" parent="visuals/enemy"]
z_index = 5
offset_left = -39.0
offset_top = 20.0
offset_right = 1.0
offset_bottom = 43.0
theme_override_font_sizes/font_size = 10
text = "erer"

[node name="enemy_name" type="Label" parent="visuals/enemy"]
z_index = 5
offset_left = -39.0
offset_top = 30.0
offset_right = 1.0
offset_bottom = 53.0
theme_override_font_sizes/font_size = 10
text = "erer"

[node name="Control" type="Control" parent="."]
z_index = 5
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -39.0
offset_top = -40.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -74.0
offset_right = 176.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
z_index = 5
layout_mode = 2

[node name="stats" type="MarginContainer" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/HBoxContainer/stats"]
layout_mode = 2

[node name="health" type="Label" parent="Control/MarginContainer/HBoxContainer/stats/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "health"

[node name="stamina" type="Label" parent="Control/MarginContainer/HBoxContainer/stats/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "stamina"

[node name="xp" type="Label" parent="Control/MarginContainer/HBoxContainer/stats/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "XP"

[node name="menu" type="MarginContainer" parent="Control/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 120)
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/HBoxContainer/menu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/HBoxContainer/menu/HBoxContainer"]
layout_mode = 2

[node name="abilities" type="Button" parent="Control/MarginContainer/HBoxContainer/menu/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Fachwissen"

[node name="basic attack" type="Button" parent="Control/MarginContainer/HBoxContainer/menu/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Allgemeinwissen"

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MarginContainer/HBoxContainer/menu/HBoxContainer"]
layout_mode = 2

[node name="items" type="Button" parent="Control/MarginContainer/HBoxContainer/menu/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Items"

[node name="run" type="Button" parent="Control/MarginContainer/HBoxContainer/menu/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Fl√ºchten"

[node name="items_menu" type="MarginContainer" parent="Control/MarginContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 120)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/HBoxContainer/items_menu"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control/MarginContainer/HBoxContainer/items_menu/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2

[node name="item_v_container" type="VBoxContainer" parent="Control/MarginContainer/HBoxContainer/items_menu/VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="back_item_menu" type="Button" parent="Control/MarginContainer/HBoxContainer/items_menu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Back"

[node name="Fachwissen_menu" type="MarginContainer" parent="Control/MarginContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 120)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/HBoxContainer/Fachwissen_menu"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control/MarginContainer/HBoxContainer/Fachwissen_menu/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2

[node name="attack_container" type="VBoxContainer" parent="Control/MarginContainer/HBoxContainer/Fachwissen_menu/VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="back_attack_menu" type="Button" parent="Control/MarginContainer/HBoxContainer/Fachwissen_menu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "back"

[node name="info" type="MarginContainer" parent="Control/MarginContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 120)
layout_mode = 2

[node name="info_label" type="Label" parent="Control/MarginContainer/HBoxContainer/info"]
layout_mode = 2
text = "test
"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="Control/MarginContainer"]
layout_mode = 2
mouse_filter = 2
color = Color(0.33333334, 0.6431373, 0.9843137, 0.7764706)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vq8ku")
}

[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/menu/HBoxContainer/VBoxContainer/abilities" to="." method="_on_abilities_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/menu/HBoxContainer/VBoxContainer/basic attack" to="." method="_on_basic_attack_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/menu/HBoxContainer/VBoxContainer2/items" to="." method="_on_items_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/menu/HBoxContainer/VBoxContainer2/run" to="." method="_on_run_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/items_menu/VBoxContainer/back_item_menu" to="." method="_on_back_item_menu_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/Fachwissen_menu/VBoxContainer/back_attack_menu" to="." method="_on_back_attack_menu_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
